fixed Navbar collaps on mobile.

--- a/assets/styles/stylesheet.sass
+++ b/assets/styles/stylesheet.sass
@@ -20,7 +20,6 @@ a:hover
 .navbar-collapse
     background: lighten($darkblue, 10%)
     padding: 0rem 1rem 1rem 1rem
-    display: flex
     align-items: center
 .logo
     height: 3.5rem
